// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders service management settings view 1`] = `
<div>
  <nav
    class="service-header navbar navbar-expand navbar-light sticky-top"
  >
    <div
      class="w-100"
    >
      <h1
        class="float-left"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root material-icons arrow-back"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            arrow_back
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        Settings
      </h1>
    </div>
  </nav>
  <div
    class="settings-tabs d-flex"
  >
    <span
      class="tab col-2 active"
    >
      <a
        href="/settings/manage"
      >
        Service management
      </a>
      <div
        class="tab-border"
      />
    </span>
    <span
      class="tab col-2"
    >
      <a
        href="/settings/service-activity"
      >
        Service activity
      </a>
      <div
        class="tab-border"
      />
    </span>
    <span
      class="tab col-2"
    >
      <a
        href="/settings/user-activity"
      >
        User activity
      </a>
      <div
        class="tab-border"
      />
    </span>
  </div>
  <div
    class="service-card card"
    tabindex="-1"
  >
    <div
      class="card-header"
    >
      <div
        class="d-flex justify-content-between"
      >
        <div>
          Departments
        </div>
        <div>
          <button
            class="btn btn-primary"
          >
            Add department
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Attorney
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Attorney
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Clerk's Office
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Clerk's Office
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Council
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Council
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Manager's Office
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Manager's Office
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Climate Initiatives
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Climate Initiatives
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Communication
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Communication
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Community Vitality
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Community Vitality
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Energy Strategy
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Energy Strategy
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Finance
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Finance
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Fire
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Fire
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Housing and Human Services
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Housing and Human Services
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Human Resources
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Human Resources
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Innovation and Technology
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Innovation and Technology
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Library and Arts
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Library and Arts
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Municipal Court
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Municipal Court
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            OSMP
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              OSMP
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Other
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Other
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Parks and Recreation
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Parks and Recreation
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Planning
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Planning
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Police
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Police
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Public Works
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Public Works
            </i>
            )
          </span>
        </div>
         
        <div>
          <button
            class="btn btn-blue-text pull-right"
          >
            Manage
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="service-card card"
    tabindex="-1"
  >
    <div
      class="card-header"
    >
      <div
        class="d-flex justify-content-between mb-0"
      >
        <div>
          Interests
        </div>
        <div>
          <button
            class="btn btn-primary"
          >
            Add interest
          </button>
        </div>
      </div>
    </div>
    <div
      class="card-body"
    />
  </div>
  <form>
    <div
      class="service-card card"
      tabindex="-1"
    >
      <div
        class="card-header"
      >
        <div
          class="d-flex justify-content-between"
        >
          <div>
            Area Median Income (AMI)
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="card-body"
      >
        <p>
          <i>
            Content managers will use these values to autocalculate income percentages, such as 30% AMI
          </i>
        </p>
        <div
          class="d-flex flex-wrap"
        >
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              1
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $79,600
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              2
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $90,900
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              3
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $102,300
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              4
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $113,600
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              5
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $122,700
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              6
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $131,800
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              7
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $140,900
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              8
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $150,000
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <form>
    <div
      class="service-card card"
      tabindex="-1"
    >
      <div
        class="card-header"
      >
        <div
          class="d-flex justify-content-between"
        >
          <div>
            Federal Poverty Level (FPL)
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="card-body"
      >
        <p>
          <i>
            Content managers will use these values to autocalculate income percentages, such as 150% FPL
          </i>
        </p>
        <div
          class="d-flex flex-wrap"
        >
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              1
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $12,490
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              2
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $16,910
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              3
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $21,330
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              4
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $25,750
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              5
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $30,170
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              6
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $34,590
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              7
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $39,010
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              8
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $43,430
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <form>
    <div
      class="service-card card"
      tabindex="-1"
    >
      <div
        class="card-header"
      >
        <div
          class="d-flex justify-content-between"
        >
          <div>
            Information Banner
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
      </div>
      <div
        class="card-body"
      >
        <p>
          <i>
            Display an information banner across the top of every page.
          </i>
        </p>
        <div>
          This is a test info banner!
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders service management settings view for non-admin 1`] = `
<div>
  <nav
    class="service-header navbar navbar-expand navbar-light sticky-top"
  >
    <div
      class="w-100"
    >
      <h1
        class="float-left"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root material-icons arrow-back"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            arrow_back
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        Settings
      </h1>
    </div>
  </nav>
  <div
    class="settings-tabs d-flex"
  >
    <span
      class="tab col-2 active"
    >
      <a
        href="/settings/manage"
      >
        Service management
      </a>
      <div
        class="tab-border"
      />
    </span>
    <span
      class="tab col-2"
    >
      <a
        href="/settings/service-activity"
      >
        Service activity
      </a>
      <div
        class="tab-border"
      />
    </span>
    <span
      class="tab col-2"
    >
      <a
        href="/settings/user-activity"
      >
        User activity
      </a>
      <div
        class="tab-border"
      />
    </span>
  </div>
  <div
    class="service-card card"
    tabindex="-1"
  >
    <div
      class="card-header"
    >
      <div
        class="d-flex justify-content-between"
      >
        <div>
          Departments
        </div>
        <div />
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Attorney
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Attorney
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Clerk's Office
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Clerk's Office
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Council
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Council
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            City Manager's Office
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              City Manager's Office
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Climate Initiatives
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Climate Initiatives
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Communication
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Communication
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Community Vitality
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Community Vitality
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Energy Strategy
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Energy Strategy
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Finance
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Finance
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Fire
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Fire
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Housing and Human Services
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Housing and Human Services
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Human Resources
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Human Resources
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Innovation and Technology
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Innovation and Technology
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Library and Arts
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Library and Arts
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Municipal Court
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Municipal Court
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            OSMP
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              OSMP
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Other
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Other
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Parks and Recreation
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Parks and Recreation
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Planning
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Planning
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Police
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Police
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
      <div
        class="d-flex justify-content-between mb-3"
      >
        <div>
          <span>
            Public Works
          </span>
          <span
            class="ml-1"
          >
            (
            <i>
              Spanish
              : 
              Public Works
            </i>
            )
          </span>
        </div>
         
        <div />
      </div>
    </div>
  </div>
  <div
    class="service-card card"
    tabindex="-1"
  >
    <div
      class="card-header"
    >
      <div
        class="d-flex justify-content-between mb-0"
      >
        <div>
          Interests
        </div>
        <div />
      </div>
    </div>
    <div
      class="card-body"
    />
  </div>
  <form>
    <div
      class="service-card card"
      tabindex="-1"
    >
      <div
        class="card-header"
      >
        <div
          class="d-flex justify-content-between"
        >
          <div>
            Area Median Income (AMI)
          </div>
          <div />
        </div>
      </div>
      <div
        class="card-body"
      >
        <p>
          <i>
            Content managers will use these values to autocalculate income percentages, such as 30% AMI
          </i>
        </p>
        <div
          class="d-flex flex-wrap"
        >
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              1
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $79,600
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              2
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $90,900
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              3
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $102,300
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              4
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $113,600
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              5
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $122,700
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              6
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $131,800
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              7
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $140,900
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              8
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $150,000
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <form>
    <div
      class="service-card card"
      tabindex="-1"
    >
      <div
        class="card-header"
      >
        <div
          class="d-flex justify-content-between"
        >
          <div>
            Federal Poverty Level (FPL)
          </div>
          <div />
        </div>
      </div>
      <div
        class="card-body"
      >
        <p>
          <i>
            Content managers will use these values to autocalculate income percentages, such as 150% FPL
          </i>
        </p>
        <div
          class="d-flex flex-wrap"
        >
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              1
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $12,490
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              2
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $16,910
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              3
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $21,330
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              4
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $25,750
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              5
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $30,170
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              6
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $34,590
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              7
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $39,010
            </span>
          </div>
          <div
            style="flex: 50%;"
          >
            <span
              class="text-nowrap mr-3"
            >
              Household of 
              8
            </span>
            <span
              label="[object Object]"
              maxlength="10"
              placeholder="$0"
              required=""
            >
              $43,430
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <form>
    <div
      class="service-card card"
      tabindex="-1"
    >
      <div
        class="card-header"
      >
        <div
          class="d-flex justify-content-between"
        >
          <div>
            Information Banner
          </div>
          <div />
        </div>
      </div>
      <div
        class="card-body"
      >
        <p>
          <i>
            Display an information banner across the top of every page.
          </i>
        </p>
        <div>
          This is a test info banner!
        </div>
      </div>
    </div>
  </form>
</div>
`;
